# django-archetype

./: .gitignore  LICENSE  README.md  customize_template.py  pyproject.toml
.github/: template-cleanup.md
config/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
project/: __init__.py
project/sample/: __init__.py  admin.py  apps.py  models.py  tests.py
project/sample/management/: __init__.py
project/sample/management/commands/: __init__.py  create_sample_people.py
project/sample/migrations/: 0001_initial.py
web/: __init__.py
web/base/: base.html
web/public/: __init__.py  contact.html  forms.py  home.html  urls.py  views.py
web/sample/: __init__.py  forms.py  person_confirm_delete.html  person_detail.html  person_form.html  person_list.html  urls.py  views.py
